--- a/arch/arm64/configs/lineage_x2_defconfig
+++ b/arch/arm64/configs/lineage_x2_defconfig
@@ -309,7 +309,7 @@ CONFIG_DEFAULT_MAPLE=y
 # CONFIG_DEFAULT_SIOPLUS is not set
 # CONFIG_DEFAULT_TRIPNDROID is not set
 CONFIG_DEFAULT_IOSCHED="maple"
-CONFIG_ASN1=y
+# CONFIG_ASN1 is not set
 CONFIG_UNINLINE_SPIN_UNLOCK=y
 CONFIG_ARCH_SUPPORTS_ATOMIC_RMW=y
 CONFIG_MUTEX_SPIN_ON_OWNER=y
@@ -4473,7 +4473,7 @@ CONFIG_CRYPTO_DEFLATE=y
 # CONFIG_CRYPTO_DRBG_MENU is not set
 # CONFIG_CRYPTO_USER_API_HASH is not set
 # CONFIG_CRYPTO_USER_API_SKCIPHER is not set
-CONFIG_CRYPTO_HASH_INFO=y
+# CONFIG_CRYPTO_HASH_INFO is not set
 CONFIG_CRYPTO_HW=y
 CONFIG_CRYPTO_DEV_QCE50=y
 # CONFIG_FIPS_ENABLE is not set
@@ -4485,7 +4485,7 @@ CONFIG_CRYPTO_DEV_QCOM_ICE=y
 # CONFIG_CRYPTO_DEV_CCP is not set
 # CONFIG_ASYMMETRIC_KEY_TYPE is not set
 CONFIG_ASYMMETRIC_PUBLIC_KEY_SUBTYPE=y
-CONFIG_PUBLIC_KEY_ALGO_RSA=y
+# CONFIG_PUBLIC_KEY_ALGO_RSA is not set
 CONFIG_X509_CERTIFICATE_PARSER=y
 CONFIG_PKCS7_MESSAGE_PARSER=y
 CONFIG_PKCS7_TEST_KEY=y
@@ -4556,10 +4556,10 @@ CONFIG_DQL=y
 CONFIG_NLATTR=y
 CONFIG_ARCH_HAS_ATOMIC64_DEC_IF_POSITIVE=y
 # CONFIG_AVERAGE is not set
-CONFIG_CLZ_TAB=y
+# CONFIG_CLZ_TAB is not set
 # CONFIG_CORDIC is not set
 # CONFIG_DDR is not set
-CONFIG_MPILIB=y
+# CONFIG_MPILIB is not set
 CONFIG_LIBFDT=y
 CONFIG_OID_REGISTRY=y
 CONFIG_UCS2_STRING=y
