--- a/arch/arm64/configs/lineage_x2_defconfig
+++ b/arch/arm64/configs/lineage_x2_defconfig
@@ -1177,6 +1177,7 @@ CONFIG_UID_SYS_STATS=y
 # CONFIG_USB_EXT_TYPE_C_PERICOM is not set
 # CONFIG_USB_EXT_TYPE_C_TI is not set
 CONFIG_TI_DRV2667=y
+CONFIG_INPUT_VL53L0=y
 # CONFIG_QPNP_MISC is not set
 # CONFIG_MEMORY_STATE_TIME is not set
 # CONFIG_C2PORT is not set
@@ -1800,9 +1801,9 @@ CONFIG_TOUCHSCREEN_ATMEL_MAXTOUCH_TS=y
 # CONFIG_TOUCHSCREEN_SUR40 is not set
 # CONFIG_TOUCHSCREEN_TPS6507X is not set
 # CONFIG_TOUCHSCREEN_ZFORCE is not set
-CONFIG_SECURE_TOUCH=y
+# CONFIG_SECURE_TOUCH is not set
 # CONFIG_TOUCHSCREEN_IT7260_I2C is not set
-CONFIG_TOUCHSCREEN_GEN_VKEYS=y
+# CONFIG_TOUCHSCREEN_GEN_VKEYS is not set
 # CONFIG_TOUCHSCREEN_FT5X06 is not set
 # CONFIG_TOUCHSCREEN_SYNAPTICS_I2C_RMI4 is not set
 # CONFIG_TOUCHSCREEN_GT9XX is not set
@@ -2188,7 +2189,7 @@ CONFIG_BATTERY_BCL=y
 # CONFIG_QPNP_VM_BMS is not set
 # CONFIG_QPNP_BMS is not set
 # CONFIG_QPNP_LINEAR_CHARGER is not set
-# CONFIG_QPNP_TYPEC is not set
+CONFIG_QPNP_TYPEC=y
 CONFIG_MSM_BCL_CTL=y
 CONFIG_MSM_BCL_PERIPHERAL_CTL=y
 CONFIG_POWER_RESET=y
@@ -2564,7 +2565,7 @@ CONFIG_MSM_CSI31_HEADER=y
 CONFIG_MSM_CSIPHY=y
 CONFIG_MSM_CSID=y
 CONFIG_MSM_EEPROM=y
-# CONFIG_MSM_ISP_V1 is not set
+CONFIG_MSM_ISP_V1=y
 CONFIG_MSM_ISPIF=y
 # CONFIG_MSM_ISPIF_V1 is not set
 # CONFIG_MSM_ISPIF_V2 is not set
@@ -2581,7 +2582,7 @@ CONFIG_MSM_V4L2_VIDEO_OVERLAY_DEVICE=y
 CONFIG_MSMB_JPEG=y
 CONFIG_MSM_FD=y
 CONFIG_MSM_JPEGDMA=y
-CONFIG_MSM_SEC_CCI_TA_NAME="seccamdemo64"
+# CONFIG_MSM_SEC_CCI_TA_NAME is not et
 # CONFIG_MSM_SEC_CCI_DEBUG is not set
 # CONFIG_MSM_AIS is not set
 # CONFIG_TSPP is not set
@@ -3021,7 +3022,7 @@ CONFIG_HID_APPLE=y
 # CONFIG_HID_CYPRESS is not set
 # CONFIG_HID_DRAGONRISE is not set
 # CONFIG_HID_EMS_FF is not set
-CONFIG_HID_ELECOM=y
+# CONFIG_HID_ELECOM is not set
 # CONFIG_HID_ELO is not set
 # CONFIG_HID_EZKEY is not set
 # CONFIG_HID_HOLTEK is not set
@@ -3038,10 +3039,10 @@ CONFIG_HID_ELECOM=y
 # CONFIG_HID_LCPOWER is not set
 # CONFIG_HID_LENOVO is not set
 # CONFIG_HID_LOGITECH is not set
-CONFIG_HID_MAGICMOUSE=y
-CONFIG_HID_MICROSOFT=y
+# CONFIG_HID_MAGICMOUSE is not set
+# CONFIG_HID_MICROSOFT is not set
 # CONFIG_HID_MONTEREY is not set
-CONFIG_HID_MULTITOUCH=y
+# CONFIG_HID_MULTITOUCH is not set
 # CONFIG_HID_NTRIG is not set
 # CONFIG_HID_ORTEK is not set
 # CONFIG_HID_PANTHERLORD is not set
@@ -3176,7 +3177,7 @@ CONFIG_USB_DWC3_DUAL_ROLE=y
 #
 CONFIG_USB_DWC3_PCI=y
 CONFIG_USB_DWC3_MSM=y
-CONFIG_IR_MAXQ616=
+CONFIG_IR_MAXQ616=y
 #
 # Debugging features
 #
