--- a/arch/arm64/configs/lineage_x2_defconfig
+++ b/arch/arm64/configs/lineage_x2_defconfig
@@ -41,7 +41,7 @@ CONFIG_BUILDTIME_EXTABLE_SORT=y
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE=""
 # CONFIG_COMPILE_TEST is not set
-CONFIG_LOCALVERSION="-Blackscreen-3.5"
+CONFIG_LOCALVERSION="-Bluescreen"
 CONFIG_LOCALVERSION_AUTO=y
 CONFIG_DEFAULT_HOSTNAME="(none)"
 CONFIG_SWAP=y
@@ -526,7 +526,7 @@ CONFIG_CPU_FREQ_GOV_COMMON=y
 CONFIG_SCHED_FREQ_INPUT=y
 CONFIG_CPU_FREQ_STAT=y
 CONFIG_CPU_FREQ_STAT_DETAILS=y
-CONFIG_CPU_FREQ_DEFAULT_GOV_PERFORMANCE=y
+#CONFIG_CPU_FREQ_DEFAULT_GOV_PERFORMANCE is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_POWERSAVE is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_USERSPACE is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_ONDEMAND is not set
@@ -536,7 +536,7 @@ CONFIG_CPU_FREQ_DEFAULT_GOV_PERFORMANCE=y
 # CONFIG_CPU_FREQ_DEFAULT_GOV_INTERACTIVE is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_NEBULA is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_LIONFISH is not set
-# CONFIG_CPU_FREQ_DEFAULT_GOV_BLU_ACTIVE is not set
+CONFIG_CPU_FREQ_DEFAULT_GOV_BLU_ACTIVE=y
 # CONFIG_CPU_FREQ_DEFAULT_GOV_WHEATLEY is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_IMPULSE is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_BIOSHOCK is not set
@@ -544,29 +544,29 @@ CONFIG_CPU_FREQ_DEFAULT_GOV_PERFORMANCE=y
 # CONFIG_CPU_FREQ_DEFAULT_GOV_ALUCARD is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_DESPAIR is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_YANKACTIVE is not set
+CONFIG_CPU_FREQ_GOV_BLU_ACTIVE=y
 CONFIG_CPU_FREQ_GOV_PERFORMANCE=y
 CONFIG_CPU_FREQ_GOV_POWERSAVE=y
 CONFIG_CPU_FREQ_GOV_USERSPACE=y
 # CONFIG_CPU_FREQ_GOV_ONDEMAND is not set
-CONFIG_CPU_FREQ_GOV_LIONHEART=y
+#CONFIG_CPU_FREQ_GOV_LIONHEART is not set
 CONFIG_CPU_FREQ_GOV_INTERACTIVE=y
-CONFIG_CPU_FREQ_GOV_NEBULA=y
-CONFIG_CPU_FREQ_GOV_IMPULSE=y
+#CONFIG_CPU_FREQ_GOV_NEBULA is not set
+#CONFIG_CPU_FREQ_GOV_IMPULSE is not set
 # CONFIG_CPU_FREQ_GOV_CONSERVATIVE is not set
 # CONFIG_CPU_FREQ_GOV_CONSERVATIVEX is not set
-CONFIG_CPU_FREQ_GOV_LIONFISH=y
-CONFIG_CPU_FREQ_GOV_DARKNESS=y
-CONFIG_CPU_FREQ_GOV_ELEMENTALX=y
-CONFIG_CPU_FREQ_GOV_SMARTMAX=y
-CONFIG_CPU_FREQ_GOV_NIGHTMARE=y
-CONFIG_CPU_FREQ_GOV_ALUCARD=y
-CONFIG_CPU_FREQ_GOV_DESPAIR=y
+#CONFIG_CPU_FREQ_GOV_LIONFISH is not set
+#CONFIG_CPU_FREQ_GOV_DARKNESS is not set
+#CONFIG_CPU_FREQ_GOV_ELEMENTALX is not set
+#CONFIG_CPU_FREQ_GOV_SMARTMAX is not set
+#CONFIG_CPU_FREQ_GOV_NIGHTMARE is not set
+#CONFIG_CPU_FREQ_GOV_ALUCARD is not set
+#CONFIG_CPU_FREQ_GOV_DESPAIR is not set
 # CONFIG_CPUFREQ_DT is not set
-CONFIG_CPU_FREQ_GOV_WHEATLEY=y
+#CONFIG_CPU_FREQ_GOV_WHEATLEY is not set
 CONFIG_CPU_FREQ_GOV_BIOSHOCK=y
-CONFIG_CPU_FREQ_GOV_YANKACTIVE=y
+#CONFIG_CPU_FREQ_GOV_YANKACTIVE is not set
 CONFIG_CPU_BOOST=y
-CONFIG_CPU_FREQ_GOV_BLU_ACTIVE=y
 CONFIG_FINGERPRINT_BOOST=y
 
 #
