--- a/arch/arm64/configs/lineage_x2_defconfig
+++ b/arch/arm64/configs/lineage_x2_defconfig
@@ -429,7 +429,7 @@ CONFIG_MIGRATION=y
 CONFIG_PHYS_ADDR_T_64BIT=y
 CONFIG_ZONE_DMA_FLAG=1
 CONFIG_BOUNCE=y
-CONFIG_KSM=y
+#CONFIG_KSM is not set
 CONFIG_DEFAULT_MMAP_MIN_ADDR=4096
 # CONFIG_TRANSPARENT_HUGEPAGE is not set
 # CONFIG_CLEANCACHE is not set
@@ -536,7 +536,7 @@ CONFIG_CPU_FREQ_DEFAULT_GOV_PERFORMANCE=y
 # CONFIG_CPU_FREQ_DEFAULT_GOV_INTERACTIVE is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_NEBULA is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_LIONFISH is not set
-# CONFIG_CPU_FREQ_DEFAULT_GOV_BLU_ACTIVE is not set
+#CONFIG_CPU_FREQ_DEFAULT_GOV_BLU_ACTIVE=y
 # CONFIG_CPU_FREQ_DEFAULT_GOV_WHEATLEY is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_IMPULSE is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_BIOSHOCK is not set
