--- a/arch/arm64/configs/lineage_x2_defconfig
+++ b/arch/arm64/configs/lineage_x2_defconfig
@@ -360,6 +360,11 @@ CONFIG_PCI_LABEL=y
 # Kernel Features
 #
 
+CONFIG_LZ4_COMPRESS=y
+CONFIG_LZ4_DECOMPRESS=y
+CONFIG_LCD_NOTIFIER=y
+CONFIG_ZSWAP=y
+
 #
 # ARM errata workarounds via the alternatives framework
 #
