--- a/arch/arm64/configs/lineage_x2_defconfig
+++ b/arch/arm64/configs/lineage_x2_defconfig
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/arm64 3.18.63 Kernel Configuration
+# Linux/arm64 3.18.92 Kernel Configuration
 #
 CONFIG_VENDOR_LEECO=y
 CONFIG_ARM64=y
@@ -288,10 +288,21 @@ CONFIG_BLOCK_COMPAT=y
 CONFIG_IOSCHED_NOOP=y
 CONFIG_IOSCHED_TEST=y
 CONFIG_IOSCHED_DEADLINE=y
+CONFIG_IOSCHED_MAPLE=y
 CONFIG_IOSCHED_CFQ=y
+CONFIG_IOSCHED_FIOPS=y
+CONFIG_IOSCHED_SIO=y
+CONFIG_IOSCHED_ZEN=y
+# CONFIG_IOSCHED_SIOPLUS is not set
+CONFIG_IOSCHED_TRIPNDROID=y
 # CONFIG_DEFAULT_DEADLINE is not set
 # CONFIG_DEFAULT_CFQ is not set
+# CONFIG_DEFAULT_MAPLE is not set
 CONFIG_DEFAULT_NOOP=y
+# CONFIG_DEFAULT_SIO is not set
+# CONFIG_DEFAULT_FIOPS is not set
+# CONFIG_DEFAULT_ZEN is not set
+# CONFIG_DEFAULT_TRIPNDROID is not set
 CONFIG_DEFAULT_IOSCHED="noop"
 CONFIG_UNINLINE_SPIN_UNLOCK=y
 CONFIG_ARCH_SUPPORTS_ATOMIC_RMW=y
@@ -480,12 +491,16 @@ CONFIG_PM_WAKELOCKS_LIMIT=0
 CONFIG_PM_RUNTIME=y
 CONFIG_PM=y
 CONFIG_PM_DEBUG=y
+# CONFIG_PM_ADVANCED_DEBUG is not set
+# CONFIG_PM_TEST_SUSPEND is not set
+CONFIG_PM_SLEEP_DEBUG=y
+# CONFIG_DPM_WATCHDOG is not set
 CONFIG_PM_OPP=y
 CONFIG_PM_CLK=y
 CONFIG_WQ_POWER_EFFICIENT_DEFAULT=y
 CONFIG_CPU_PM=y
 CONFIG_SUSPEND_TIME=y
-CONFIG_DEDUCE_WAKEUP_REASONS=y
+# CONFIG_DEDUCE_WAKEUP_REASONS is not set
 CONFIG_ARCH_SUSPEND_POSSIBLE=y
 CONFIG_ARM64_CPU_SUSPEND=y
 
@@ -506,8 +521,6 @@ CONFIG_CPU_IDLE_GOV_MENU=y
 #
 # CONFIG_ARM64_CPUIDLE is not set
 # CONFIG_ARCH_NEEDS_CPU_IDLE_COUPLED is not set
-CONFIG_ARM_PSCI=y
-CONFIG_CPU_V7=
 
 #
 # CPU Frequency scaling
@@ -521,30 +534,16 @@ CONFIG_CPU_FREQ_DEFAULT_GOV_PERFORMANCE=y
 # CONFIG_CPU_FREQ_DEFAULT_GOV_POWERSAVE is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_USERSPACE is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_ONDEMAND is not set
-# CONFIG_CPU_FREQ_DEFAULT_GOV_LIONHEART is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_CONSERVATIVE is not set
-# CONFIG_CPU_FREQ_DEFAULT_GOV_CONSERVATIVEX is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_INTERACTIVE is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_SCHED is not set
-# CONFIG_CPU_FREQ_DEFAULT_GOV_NEBULA is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_LIONFISH is not set
-# CONFIG_CPU_FREQ_DEFAULT_GOV_BLU_ACTIVE is not set
-# CONFIG_CPU_FREQ_DEFAULT_GOV_WHEATLEY is not set
-# CONFIG_CPU_FREQ_DEFAULT_GOV_IMPULSE is not set
-# CONFIG_CPU_FREQ_DEFAULT_GOV_BIOSHOCK is not set
-# CONFIG_CPU_FREQ_DEFAULT_GOV_NIGHTMARE is not set
-# CONFIG_CPU_FREQ_DEFAULT_GOV_ALUCARD is not set
-# CONFIG_CPU_FREQ_DEFAULT_GOV_DESPAIR is not set
-# CONFIG_CPU_FREQ_DEFAULT_GOV_YANKACTIVE is not set
 CONFIG_CPU_FREQ_GOV_PERFORMANCE=y
 CONFIG_CPU_FREQ_GOV_POWERSAVE=y
 CONFIG_CPU_FREQ_GOV_USERSPACE=y
 CONFIG_CPU_FREQ_GOV_ONDEMAND=y
 CONFIG_CPU_FREQ_GOV_INTERACTIVE=y
-CONFIG_CPU_FREQ_GOV_NEBULA=y
-CONFIG_CPU_FREQ_GOV_IMPULSE=y
 CONFIG_CPU_FREQ_GOV_CONSERVATIVE=y
-CONFIG_CPU_FREQ_GOV_CONSERVATIVEX=y
 # CONFIG_CPU_FREQ_GOV_SCHED is not set
 
 #
@@ -552,17 +551,8 @@ CONFIG_CPU_FREQ_GOV_CONSERVATIVEX=y
 #
 CONFIG_CPU_FREQ_GOV_LIONFISH=y
 CONFIG_CPU_FREQ_GOV_DARKNESS=y
-CONFIG_CPU_FREQ_GOV_ELEMENTALX=y
-CONFIG_CPU_FREQ_GOV_SMARTMAX=y
-CONFIG_CPU_FREQ_GOV_NIGHTMARE=y
-CONFIG_CPU_FREQ_GOV_ALUCARD=y
-CONFIG_CPU_FREQ_GOV_DESPAIR=y
 # CONFIG_CPUFREQ_DT is not set
-CONFIG_CPU_FREQ_GOV_WHEATLEY=y
-CONFIG_CPU_FREQ_GOV_BIOSHOCK=y
-CONFIG_CPU_FREQ_GOV_YANKACTIVE=y
 CONFIG_CPU_BOOST=y
-CONFIG_CPU_FREQ_GOV_BLU_ACTIVE=y
 CONFIG_FINGERPRINT_BOOST=y
 
 #
@@ -1034,7 +1024,7 @@ CONFIG_WEXT_PROC=y
 CONFIG_WEXT_SPY=y
 CONFIG_WEXT_PRIV=y
 CONFIG_CFG80211=y
-# CONFIG_NL80211_TESTMODE is not set
+CONFIG_NL80211_TESTMODE=y
 # CONFIG_CFG80211_DEVELOPER_WARNINGS is not set
 # CONFIG_CFG80211_REG_DEBUG is not set
 # CONFIG_CFG80211_CERTIFICATION_ONUS is not set
@@ -1077,6 +1067,7 @@ CONFIG_FIRMWARE_IN_KERNEL=y
 CONFIG_EXTRA_FIRMWARE=""
 CONFIG_FW_LOADER_USER_HELPER=y
 CONFIG_FW_LOADER_USER_HELPER_FALLBACK=y
+# CONFIG_FW_CACHE is not set
 CONFIG_WANT_DEV_COREDUMP=y
 CONFIG_ALLOW_DEV_COREDUMP=y
 CONFIG_DEV_COREDUMP=y
@@ -1089,7 +1080,6 @@ CONFIG_SOC_BUS=y
 CONFIG_REGMAP=y
 CONFIG_REGMAP_I2C=y
 CONFIG_REGMAP_SPI=y
-CONFIG_REGMAP_SWR=y
 CONFIG_REGMAP_ALLOW_WRITE_DEBUGFS=y
 CONFIG_DMA_SHARED_BUFFER=y
 # CONFIG_FENCE_TRACE is not set
@@ -1334,7 +1324,6 @@ CONFIG_MD=y
 CONFIG_BLK_DEV_DM_BUILTIN=y
 CONFIG_BLK_DEV_DM=y
 # CONFIG_DM_DEBUG is not set
-CONFIG_DM_BUFIO=y
 CONFIG_DM_CRYPT=y
 CONFIG_DM_REQ_CRYPT=y
 # CONFIG_DM_SNAPSHOT is not set
@@ -1350,8 +1339,6 @@ CONFIG_DM_UEVENT=y
 # CONFIG_DM_FLAKEY is not set
 # CONFIG_DM_VERITY is not set
 # CONFIG_DM_VERITY_HASH_PREFETCH_MIN_SIZE_128 is not set
-# CONFIG_DM_VERITY_HASH_PREFETCH_MIN_SIZE is not set
-# CONFIG_DM_VERITY_FEC is not set
 # CONFIG_DM_SWITCH is not set
 # CONFIG_DM_LOG_WRITES is not set
 # CONFIG_TARGET_CORE is not set
@@ -2525,6 +2512,7 @@ CONFIG_REGULATOR_SPM=y
 # CONFIG_REGULATOR_CPR is not set
 # CONFIG_REGULATOR_CPR2_GFX is not set
 CONFIG_REGULATOR_CPR3=y
+CONFIG_REGULATOR_CPR3_VOLTAGE_CONTROL=y
 CONFIG_REGULATOR_CPR3_HMSS=y
 CONFIG_REGULATOR_CPR3_MMSS=y
 # CONFIG_REGULATOR_CPR4_APSS is not set
@@ -2920,10 +2908,7 @@ CONFIG_SND_SOC_I2C_AND_SPI=y
 # CONFIG_SND_SOC_TAS5086 is not set
 # CONFIG_SND_SOC_TLV320AIC31XX is not set
 # CONFIG_SND_SOC_TLV320AIC3X is not set
-# CONFIG_SND_SOC_WCD9330 is not set
 CONFIG_SND_SOC_WCD9335=y
-# CONFIG_SND_SOC_WSA881X_SENSORS is not set
-# CONFIG_SND_SOC_WSA881X is not set
 CONFIG_SND_SOC_WCD9XXX=y
 CONFIG_SND_SOC_WCD9XXX_V2=y
 CONFIG_SND_SOC_WCD_CPE=y
@@ -3279,17 +3264,17 @@ CONFIG_USB_GADGET_STORAGE_NUM_BUFFERS=4
 # CONFIG_USB_CI13XXX_MSM_HSIC is not set
 # CONFIG_USB_DUMMY_HCD is not set
 CONFIG_USB_LIBCOMPOSITE=y
-# CONFIG_USB_F_ACM is not set
-# CONFIG_USB_U_SERIAL is not set
-# CONFIG_USB_F_SERIAL is not set
-# CONFIG_USB_F_NCM is not set
-# CONFIG_USB_F_ECM is not set
-# CONFIG_USB_F_MASS_STORAGE is not set
-# CONFIG_USB_F_FS is not set
-# CONFIG_USB_F_UAC1 is not set
-# CONFIG_USB_F_UAC2 is not set
-# CONFIG_USB_F_UVC is not set
-# CONFIG_USB_F_AUDIO_SRC is not set
+CONFIG_USB_F_ACM=y
+CONFIG_USB_U_SERIAL=y
+CONFIG_USB_F_SERIAL=y
+CONFIG_USB_F_NCM=y
+CONFIG_USB_F_ECM=y
+CONFIG_USB_F_MASS_STORAGE=y
+CONFIG_USB_F_FS=y
+CONFIG_USB_F_UAC1=y
+CONFIG_USB_F_UAC2=y
+CONFIG_USB_F_UVC=y
+CONFIG_USB_F_AUDIO_SRC=y
 # CONFIG_USB_CONFIGFS is not set
 CONFIG_USB_G_ANDROID=y
 # CONFIG_USB_ANDROID_RNDIS_DWORD_ALIGNED is not set
@@ -3614,7 +3599,6 @@ CONFIG_WLAN_FEATURE_NAN=y
 CONFIG_QCOM_TDLS=y
 CONFIG_QCOM_LTE_COEX=y
 # CONFIG_WLAN_SYNC_TSF is not set
-CONFIG_WLAN_FEATURE_MEMDUMP=y
 CONFIG_WLAN_OFFLOAD_PACKETS=y
 CONFIG_QCA_WIFI_AUTOMOTIVE_CONC=y
 CONFIG_WLAN_UDP_RESPONSE_OFFLOAD=y
@@ -4261,6 +4245,7 @@ CONFIG_ARCH_HAS_UBSAN_SANITIZE_ALL=y
 # Security options
 #
 CONFIG_KEYS=y
+CONFIG_KEYS_COMPAT=y
 # CONFIG_PERSISTENT_KEYRINGS is not set
 # CONFIG_BIG_KEYS is not set
 CONFIG_ENCRYPTED_KEYS=y
@@ -4488,8 +4473,5 @@ CONFIG_LIBFDT=y
 CONFIG_UCS2_STRING=y
 CONFIG_ARCH_HAS_SG_CHAIN=y
 CONFIG_QMI_ENCDEC=y
-# CONFIG_POWERSUSPEND is not set
 # CONFIG_QMI_ENCDEC_DEBUG is not set
 # CONFIG_STRICT_MEMORY_RWX is not set
-CONFIG_REGULATOR_CPR3_VOLTAGE_CONTROL=y
-CONFIG_FINGERPRINT_BOOST=y
